jx: prefix, remove var prefix for groupBy, if:noElse testcase,
jxls-poi commands will be added automatically, withHideTemplateSheet()
removed, multisheet with objects testcase, useStreaming() for better
overriding and other small stuff